Add assertion for -noverify (apparently unnecesary in Gradle)